tests/snapshots/snapshots__fc_blackbox@LOG00002.BFL.snap
---
source: blackbox-log/tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/LOG00002.BFL"
---
FileSnapshot(
  count: 1,
  logs: [
    Ok(LogSnapshot(
      headers: Headers(
        version: V2,
        firmware_revision: "Betaflight 4.2.6 (a4b6db1e7) STM32F405",
        firmware_kind: Betaflight,
        board_info: Some("AIRB OMNIBUSF4"),
        craft_name: None,
        vbat_reference: Some(0),
        acceleration_1g: Some(2048),
        gyro_scale: Some(0.017453292),
        min_throttle: Some(1070),
        motor_output_range: Some(MotorOutputRange(
          min: 158,
          max: 2047,
        )),
        unknown: {
          "dyn_notch_width_percent": "0",
          "rc_smoothing_active_cutoffs": "0, 90",
          "acc_hardware": "0",
          "deadband": "0",
          "tpa_rate": "65",
          "rc_smoothing_cutoffs": "0, 0",
          "gyro_lowpass2_type": "0",
          "rate_limits": "1998,1998,1998",
          "dterm_notch_cutoff": "0",
          "pid_process_denom": "1",
          "gyro_cal_on_first_arm": "0",
          "yaw_lowpass_hz": "0",
          "acc_limit_yaw": "0",
          "dyn_notch_max_hz": "400",
          "yaw_deadband": "0",
          "mag_hardware": "1",
          "maxthrottle": "2000",
          "vbat_pid_gain": "0",
          "I interval": "256",
          "dterm_lowpass_dyn_hz": "70,170",
          "use_integrated_yaw": "0",
          "dshot_bidir": "0",
          "ff_boost": "15",
          "gyro_sync_denom": "1",
          "rpm_notch_lpf": "150",
          "rc_smoothing_filter_type": "1, 1",
          "serialrx_provider": "2",
          "dshot_idle_value": "550",
          "features": "809500680",
          "feedforward_weight": "90,95,90",
          "d_min_advance": "20",
          "rc_smoothing_debug_axis": "0",
          "gyro_rpm_notch_q": "500",
          "rc_interpolation_channels": "2",
          "dterm_filter2_type": "0",
          "ff_interpolate_sp": "2",
          "gyro_lowpass_type": "0",
          "Log start datetime": "0000-01-01T00:00:00.000+00:00",
          "dterm_filter_type": "0",
          "vbatcellvoltage": "330,350,430",
          "anti_gravity_mode": "0",
          "rc_interpolation_interval": "19",
          "rc_smoothing_type": "1",
          "iterm_relax": "1",
          "gyro_rpm_notch_harmonics": "2",
          "rc_interpolation": "2",
          "tpa_breakpoint": "1350",
          "d_min_gain": "37",
          "dterm_lowpass_hz": "150",
          "rates": "70,70,70",
          "iterm_relax_cutoff": "15",
          "d_min": "23,25,0",
          "acc_limit": "0",
          "ff_spike_limit": "60",
          "ff_max_rate_limit": "100",
          "gyro_lowpass_hz": "200",
          "gyro_notch_hz": "0,0",
          "anti_gravity_threshold": "250",
          "acc_lpf_hz": "1000",
          "baro_hardware": "1",
          "motor_pwm_protocol": "7",
          "rc_rates": "100,100,100",
          "pidAtMinThrottle": "1",
          "pitchPID": "46,90,38",
          "magPID": "40",
          "P interval": "8",
          "pidsum_limit_yaw": "400",
          "pidsum_limit": "500",
          "rates_type": "0",
          "Firmware date": "Jan  5 2021 19:07:23",
          "dyn_notch_min_hz": "80",
          "iterm_relax_type": "1",
          "dterm_rpm_notch_min": "100",
          "gyro_lowpass_dyn_hz": "200,500",
          "motor_pwm_rate": "480",
          "thr_mid": "50",
          "dyn_notch_q": "250",
          "dterm_notch_hz": "0",
          "feedforward_transition": "0",
          "gyro_rpm_notch_min": "80",
          "rollPID": "42,85,35",
          "thr_expo": "0",
          "looptime": "125",
          "yawPID": "45,90,0",
          "levelPID": "50,50,75",
          "rc_expo": "0,0,0",
          "dterm_rpm_notch_harmonics": "0",
          "airmode_activate_throttle": "25",
          "debug_mode": "3",
          "P ratio": "32",
          "anti_gravity_gain": "3500",
          "gyro_hardware_lpf": "0",
          "dterm_lowpass2_hz": "150",
          "use_unsynced_pwm": "0",
          "rc_smoothing_rx_average": "0",
          "dterm_rpm_notch_q": "500",
          "iterm_windup": "100",
          "abs_control_gain": "0",
          "gyro_notch_cutoff": "0,0",
          "rc_smoothing_auto_factor": "10",
          "gyro_lowpass2_hz": "250",
        },
      ),
      stats: Stats(
        counts: FrameCounts(
          event: 0,
          main: 199975,
          slow: 25,
          gps: 0,
          gps_home: 0,
        ),
      ),
      capped: true,
      main: MainSnapshot(
        count: 199975,
        last_iteration: 1599750,
        time: FieldSnapshot(
          min: 0,
          max: 206899760,
          unique: 199975,
          histogram: (12489, 12409, 12484, 12724, 12080, 12958, 12731, 12337, 12468, 12231, 12358, 12813, 11953, 12824, 12809, 12307),
        ),
        fields: Fields([
          FieldSnapshot(
            name: "axisP[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -168,
              max: 174,
              unique: 339,
              histogram: (34158, 22167, 18666, 15670, 13416, 12647, 11732, 10940, 9726, 8972, 8355, 7732, 7014, 6536, 6141, 6103),
            ),
          ),
          FieldSnapshot(
            name: "axisP[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -57,
              max: 140,
              unique: 183,
              histogram: (30316, 19700, 18151, 16693, 15145, 13566, 12336, 11078, 10416, 9315, 8666, 7883, 7441, 6941, 6446, 5882),
            ),
          ),
          FieldSnapshot(
            name: "axisP[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -199,
              max: 281,
              unique: 477,
              histogram: (36194, 20074, 14404, 12779, 12165, 11537, 10585, 9854, 9518, 9536, 9313, 9177, 9020, 8575, 8858, 8386),
            ),
          ),
          FieldSnapshot(
            name: "axisI[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisI[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisI[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisD[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -100,
              max: 53,
              unique: 96,
              histogram: (52617, 37702, 29904, 22832, 16444, 11740, 8351, 5894, 4177, 2979, 2168, 1661, 1187, 1008, 735, 576),
            ),
          ),
          FieldSnapshot(
            name: "axisD[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -58,
              max: 48,
              unique: 92,
              histogram: (50149, 36233, 29530, 23103, 17227, 12698, 9061, 6458, 4721, 3351, 2340, 1788, 1251, 926, 623, 516),
            ),
          ),
          FieldSnapshot(
            name: "axisF[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisF[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "axisF[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1000,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "setpoint[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "vbatLatest",
            unit: Voltage,
            history: FieldSnapshot(
              min: 0,
              max: 70,
              unique: 8,
              histogram: (34324, 0, 527, 0, 46796, 0, 79, 0, 7334, 0, 99857, 0, 59, 0, 10999, 0),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[0]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -128,
              max: 125,
              unique: 252,
              histogram: (26937, 27764, 21819, 17414, 15103, 13795, 12340, 10859, 9794, 8589, 7668, 7054, 6327, 5717, 4676, 4119),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[1]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -95,
              max: 40,
              unique: 127,
              histogram: (25238, 26454, 22671, 19141, 16106, 13821, 12343, 11041, 9905, 9068, 8045, 6907, 5926, 5102, 4338, 3869),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[2]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -195,
              max: 139,
              unique: 335,
              histogram: (31266, 26661, 16279, 14238, 13642, 11959, 11553, 10850, 10160, 9825, 9006, 8064, 6817, 6575, 6749, 6331),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[0]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -192,
              max: 1074,
              unique: 1259,
              histogram: (11992, 11843, 12077, 12302, 12278, 11926, 11609, 11351, 11970, 11740, 12085, 12353, 11983, 14007, 16524, 13935),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[1]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -774,
              max: 700,
              unique: 1467,
              histogram: (11669, 12256, 12903, 12347, 12327, 12251, 12495, 18567, 13543, 11916, 11394, 12619, 11632, 11581, 11232, 11243),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[2]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: 0,
              max: 1956,
              unique: 1459,
              histogram: (12701, 13453, 13147, 13018, 12934, 12796, 12791, 12472, 12310, 11821, 11996, 11902, 12155, 12043, 12128, 12308),
            ),
          ),
          FieldSnapshot(
            name: "debug[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -128,
              max: 125,
              unique: 252,
              histogram: (26937, 27764, 21819, 17414, 15103, 13795, 12340, 10859, 9794, 8589, 7668, 7054, 6327, 5717, 4676, 4119),
            ),
          ),
          FieldSnapshot(
            name: "debug[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -95,
              max: 40,
              unique: 127,
              histogram: (25238, 26454, 22671, 19141, 16106, 13821, 12343, 11041, 9905, 9068, 8045, 6907, 5926, 5102, 4338, 3869),
            ),
          ),
          FieldSnapshot(
            name: "debug[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -195,
              max: 139,
              unique: 335,
              histogram: (31266, 26661, 16279, 14238, 13642, 11959, 11553, 10850, 10160, 9825, 9006, 8064, 6817, 6575, 6749, 6331),
            ),
          ),
          FieldSnapshot(
            name: "debug[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "motor[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 158,
              unique: 1,
            ),
          ),
        ]),
      ),
      slow: SlowSnapshot(
        count: 25,
        fields: Fields([
          FieldSnapshot(
            name: "flightModeFlags",
            unit: FlightMode,
            history: {},
          ),
          FieldSnapshot(
            name: "stateFlags",
            unit: State,
            history: {},
          ),
          FieldSnapshot(
            name: "failsafePhase",
            unit: FailsafePhase,
            history: {
              "Idle": 25,
            },
          ),
          FieldSnapshot(
            name: "rxSignalReceived",
            unit: Boolean,
            history: History(
              yes: 0,
              no: 25,
            ),
          ),
          FieldSnapshot(
            name: "rxFlightChannelsValid",
            unit: Boolean,
            history: History(
              yes: 0,
              no: 25,
            ),
          ),
        ]),
      ),
    )),
  ],
)
