tests/snapshots/snapshots__fc_blackbox@LOG00004.TXT.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/LOG00004.TXT"
---
File(
  count: 1,
  logs: [
    Err(UnsupportedFirmwareVersion(Inav("3.0.1"))),
  ],
)
