tests/snapshots/snapshots__fc_blackbox@btfl_002.bbl.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/btfl_002.bbl"
---
FileSnapshot(
  count: 1,
  logs: [
    Ok(LogSnapshot(
      headers: Headers(
        version: V2,
        firmware_revision: "Betaflight 4.2.8 (101738d8e) STM32F7X2",
        firmware: Betaflight("4.2.8"),
        board_info: Some("AIKO AIKONF7"),
        craft_name: Some("Gecko"),
        vbat_reference: Some(1653),
        acceleration_1g: Some(2048),
        gyro_scale: Some(0.017453292),
        min_throttle: Some(1070),
        motor_output_range: Some(MotorOutputRange(
          min: 158,
          max: 2047,
        )),
        unknown: {
          "dyn_notch_width_percent": "5",
          "rc_smoothing_active_cutoffs": "100, 80",
          "acc_hardware": "0",
          "deadband": "1",
          "tpa_rate": "70",
          "rc_smoothing_cutoffs": "0, 0",
          "gyro_lowpass2_type": "0",
          "rate_limits": "1998,1998,1998",
          "dterm_notch_cutoff": "0",
          "pid_process_denom": "1",
          "gyro_cal_on_first_arm": "0",
          "yaw_lowpass_hz": "0",
          "acc_limit_yaw": "0",
          "dyn_notch_max_hz": "500",
          "yaw_deadband": "1",
          "mag_hardware": "1",
          "maxthrottle": "2000",
          "vbat_pid_gain": "0",
          "I interval": "256",
          "dterm_lowpass_dyn_hz": "0,350",
          "use_integrated_yaw": "0",
          "dshot_bidir": "1",
          "ff_boost": "15",
          "gyro_sync_denom": "1",
          "rpm_notch_lpf": "150",
          "rc_smoothing_filter_type": "1, 1",
          "serialrx_provider": "9",
          "dshot_idle_value": "550",
          "features": "943981608",
          "feedforward_weight": "140,170,90",
          "d_min_advance": "20",
          "rc_smoothing_debug_axis": "0",
          "gyro_rpm_notch_q": "500",
          "rc_interpolation_channels": "2",
          "dterm_filter2_type": "0",
          "ff_interpolate_sp": "2",
          "gyro_lowpass_type": "0",
          "Log start datetime": "0000-01-01T00:00:00.000+00:00",
          "dterm_filter_type": "1",
          "vbatcellvoltage": "330,350,430",
          "anti_gravity_mode": "0",
          "rc_interpolation_interval": "19",
          "rc_smoothing_type": "1",
          "iterm_relax": "1",
          "gyro_rpm_notch_harmonics": "3",
          "rc_interpolation": "2",
          "tpa_breakpoint": "1450",
          "d_min_gain": "37",
          "dterm_lowpass_hz": "100",
          "rates": "70,70,70",
          "iterm_relax_cutoff": "15",
          "d_min": "27,30,0",
          "acc_limit": "0",
          "ff_spike_limit": "60",
          "ff_max_rate_limit": "100",
          "gyro_lowpass_hz": "300",
          "gyro_notch_hz": "115,162",
          "anti_gravity_threshold": "250",
          "acc_lpf_hz": "1000",
          "baro_hardware": "1",
          "motor_pwm_protocol": "7",
          "rc_rates": "10,10,10",
          "pidAtMinThrottle": "1",
          "pitchPID": "39,80,40",
          "magPID": "40",
          "P interval": "16",
          "pidsum_limit_yaw": "400",
          "pidsum_limit": "500",
          "rates_type": "3",
          "Firmware date": "Feb 15 2021 12:10:35",
          "dyn_notch_min_hz": "100",
          "iterm_relax_type": "1",
          "dterm_rpm_notch_min": "100",
          "gyro_lowpass_dyn_hz": "0,400",
          "motor_pwm_rate": "480",
          "thr_mid": "50",
          "dyn_notch_q": "350",
          "dterm_notch_hz": "0",
          "feedforward_transition": "0",
          "gyro_rpm_notch_min": "120",
          "rollPID": "35,75,35",
          "thr_expo": "0",
          "looptime": "125",
          "yawPID": "40,60,0",
          "levelPID": "50,50,75",
          "rc_expo": "60,60,60",
          "dterm_rpm_notch_harmonics": "0",
          "airmode_activate_throttle": "25",
          "debug_mode": "0",
          "P ratio": "16",
          "anti_gravity_gain": "3500",
          "gyro_hardware_lpf": "0",
          "dterm_lowpass2_hz": "0",
          "use_unsynced_pwm": "0",
          "rc_smoothing_rx_average": "3998",
          "dterm_rpm_notch_q": "500",
          "iterm_windup": "100",
          "abs_control_gain": "0",
          "gyro_notch_cutoff": "105,152",
          "rc_smoothing_auto_factor": "20",
          "gyro_lowpass2_hz": "0",
        },
      ),
      stats: Stats(
        counts: FrameCounts(
          event: 4,
          main: 66640,
          slow: 17,
          gps: 0,
          gps_home: 0,
        ),
      ),
      capped: false,
      events: [
        Resume(
          log_iteration: 4608,
          time: 17433272,
        ),
        SyncBeep(16734098),
        FlightMode(
          flags: 524289,
          last_flags: 268435459,
        ),
        Disarm(4),
      ],
      main: MainSnapshot(
        count: 66640,
        last_iteration: 1070607,
        time: FieldSnapshot(
          min: 0,
          max: 151271525,
          unique: 66640,
          histogram: (4255, 4323, 4397, 4162, 4113, 4234, 2417, 5808, 4173, 3926, 4194, 3954, 4149, 4259, 2258, 6018),
        ),
        fields: Fields([
          FieldSnapshot(
            name: "axisP[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -160,
              max: 118,
              unique: 196,
              histogram: (22746, 16615, 9823, 5578, 3299, 2228, 1634, 1177, 907, 664, 556, 385, 340, 266, 223, 199),
            ),
          ),
          FieldSnapshot(
            name: "axisP[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -271,
              max: 93,
              unique: 145,
              histogram: (23067, 16843, 10114, 5615, 3156, 2002, 1408, 1011, 739, 666, 515, 430, 368, 288, 235, 183),
            ),
          ),
          FieldSnapshot(
            name: "axisP[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -193,
              max: 98,
              unique: 78,
              histogram: (28471, 18571, 8697, 4250, 2307, 1438, 881, 606, 390, 269, 214, 184, 135, 100, 74, 53),
            ),
          ),
          FieldSnapshot(
            name: "axisI[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -43,
              max: 36,
              unique: 80,
              histogram: (9551, 9168, 7405, 6700, 5245, 4623, 3867, 3514, 2903, 3070, 3238, 2231, 1546, 1085, 1410, 1084),
            ),
          ),
          FieldSnapshot(
            name: "axisI[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -92,
              max: 89,
              unique: 168,
              histogram: (4009, 3347, 2793, 2741, 2522, 2661, 2564, 3472, 4607, 5952, 5380, 6265, 5705, 5757, 5310, 3555),
            ),
          ),
          FieldSnapshot(
            name: "axisI[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -69,
              max: 45,
              unique: 115,
              histogram: (6832, 6505, 6352, 6877, 6176, 5266, 4892, 4619, 4316, 3584, 2884, 2435, 1834, 1550, 1238, 1280),
            ),
          ),
          FieldSnapshot(
            name: "axisD[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -240,
              max: 283,
              unique: 318,
              histogram: (9814, 9294, 8156, 7467, 6191, 5119, 4197, 3555, 2803, 2296, 1893, 1601, 1266, 1183, 961, 844),
            ),
          ),
          FieldSnapshot(
            name: "axisD[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -1052,
              max: 367,
              unique: 177,
              histogram: (11929, 10707, 9377, 7963, 6254, 5098, 3859, 2977, 2243, 1715, 1280, 995, 794, 606, 463, 380),
            ),
          ),
          FieldSnapshot(
            name: "axisF[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -208,
              max: 254,
              unique: 313,
              histogram: (36839, 11409, 6214, 3770, 2424, 1544, 1046, 821, 596, 447, 409, 319, 232, 227, 178, 165),
            ),
          ),
          FieldSnapshot(
            name: "axisF[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -45,
              max: 46,
              unique: 80,
              histogram: (41855, 10495, 5084, 2934, 1871, 1322, 868, 622, 441, 325, 239, 180, 138, 125, 73, 68),
            ),
          ),
          FieldSnapshot(
            name: "axisF[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -15,
              max: 15,
              unique: 31,
              histogram: (46146, 10153, 4796, 2375, 1311, 718, 438, 231, 186, 120, 76, 40, 26, 15, 6, 3),
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -344,
              max: 499,
              unique: 842,
              histogram: (5827, 3269, 6922, 6372, 5148, 4259, 4109, 3263, 3525, 3784, 2916, 3767, 3611, 2656, 3391, 3821),
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -349,
              max: 211,
              unique: 557,
              histogram: (6893, 2452, 5030, 7122, 6658, 4090, 4020, 2977, 3548, 4402, 2741, 3340, 3316, 2845, 3287, 3919),
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -325,
              max: 328,
              unique: 654,
              histogram: (3385, 2945, 4292, 4249, 7229, 5004, 6569, 4404, 3458, 3557, 3431, 3577, 4046, 2928, 3802, 3764),
            ),
          ),
          FieldSnapshot(
            name: "rcCommand[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 2000,
              unique: 808,
              histogram: (3920, 4303, 4562, 2520, 3697, 3965, 3778, 3650, 8867, 4055, 3772, 3735, 4276, 4191, 4153, 3196),
            ),
          ),
          FieldSnapshot(
            name: "setpoint[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -221,
              max: 702,
              unique: 785,
              histogram: (8067, 9607, 4304, 4976, 3988, 3927, 3868, 4154, 3266, 3542, 2550, 2797, 3124, 2807, 2791, 2872),
            ),
          ),
          FieldSnapshot(
            name: "setpoint[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -229,
              max: 87,
              unique: 305,
              histogram: (7533, 13396, 4487, 5485, 3268, 4901, 4215, 4266, 2826, 3205, 2217, 2504, 2476, 2112, 1749, 2000),
            ),
          ),
          FieldSnapshot(
            name: "setpoint[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: -194,
              max: 198,
              unique: 391,
              histogram: (4482, 13455, 4258, 4751, 3667, 3978, 3684, 3400, 3287, 3830, 3020, 3013, 2847, 3671, 3261, 2036),
            ),
          ),
          FieldSnapshot(
            name: "setpoint[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 1000,
              unique: 771,
              histogram: (9027, 3884, 3838, 3680, 3870, 3521, 3991, 3774, 3925, 3574, 3502, 3899, 3654, 3682, 4172, 4647),
            ),
          ),
          FieldSnapshot(
            name: "vbatLatest",
            unit: Voltage,
            history: FieldSnapshot(
              min: 0,
              max: 16580,
              unique: 308,
              histogram: (8539, 0, 8613, 0, 8089, 0, 8216, 0, 8445, 0, 7793, 0, 8234, 0, 8711, 0),
            ),
          ),
          FieldSnapshot(
            name: "amperageLatest",
            unit: Amperage,
            history: FieldSnapshot(
              min: 0,
              max: 0,
              unique: 1,
            ),
          ),
          FieldSnapshot(
            name: "rssi",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 680,
              unique: 238,
              histogram: (3435, 4720, 4480, 4584, 4286, 4034, 4034, 3740, 5582, 3934, 4085, 4133, 3638, 3638, 4036, 4281),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[0]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -234,
              max: 730,
              unique: 851,
              histogram: (5701, 7850, 6257, 5341, 4946, 4399, 4210, 3935, 3635, 3364, 3105, 2878, 2718, 2861, 2810, 2630),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[1]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -234,
              max: 201,
              unique: 338,
              histogram: (7187, 9768, 7495, 5484, 4539, 4310, 4105, 3747, 3323, 2860, 2577, 2467, 2347, 2225, 2094, 2112),
            ),
          ),
          FieldSnapshot(
            name: "gyroADC[2]",
            unit: Rotation,
            history: FieldSnapshot(
              min: -196,
              max: 200,
              unique: 397,
              histogram: (6181, 8244, 6164, 5073, 4504, 4182, 3830, 3573, 3506, 3291, 3161, 3042, 3035, 3110, 3029, 2715),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[0]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -4231,
              max: 204,
              unique: 965,
              histogram: (4188, 4181, 4229, 4134, 4108, 4169, 4122, 4183, 4269, 4201, 4049, 4143, 4371, 4267, 4087, 3939),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[1]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -748,
              max: 1090,
              unique: 1176,
              histogram: (4429, 4485, 4641, 4440, 4408, 4245, 4163, 4092, 3968, 3980, 3951, 4185, 3939, 3928, 3909, 3877),
            ),
          ),
          FieldSnapshot(
            name: "accSmooth[2]",
            unit: Acceleration,
            history: FieldSnapshot(
              min: -266,
              max: 7527,
              unique: 4017,
              histogram: (4095, 4224, 4116, 4159, 4182, 4201, 4234, 3991, 4159, 4052, 4217, 4339, 4157, 4124, 4227, 4163),
            ),
          ),
          FieldSnapshot(
            name: "motor[0]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 2055,
              unique: 1417,
              histogram: (4197, 4096, 4089, 4158, 4054, 4150, 4141, 4067, 4121, 4218, 4001, 4147, 4075, 4371, 4645, 4110),
            ),
          ),
          FieldSnapshot(
            name: "motor[1]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 2046,
              unique: 1487,
              histogram: (4195, 4105, 4025, 4194, 4152, 4154, 4186, 4164, 4158, 4185, 4088, 4210, 4170, 4270, 4217, 4167),
            ),
          ),
          FieldSnapshot(
            name: "motor[2]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 2075,
              unique: 1408,
              histogram: (4141, 4119, 4022, 4079, 4068, 4028, 4024, 4036, 4155, 4092, 4142, 4218, 4513, 4723, 4109, 4171),
            ),
          ),
          FieldSnapshot(
            name: "motor[3]",
            unit: Unitless,
            history: FieldSnapshot(
              min: 0,
              max: 2038,
              unique: 1488,
              histogram: (4079, 4159, 4094, 4090, 4106, 4133, 4079, 4177, 4127, 4224, 4108, 4243, 4149, 4461, 4239, 4172),
            ),
          ),
        ]),
      ),
      slow: SlowSnapshot(
        count: 17,
        fields: Fields([
          FieldSnapshot(
            name: "flightModeFlags",
            unit: FlightMode,
            history: {
              "ARM": 17,
              "BLACKBOX": 17,
            },
          ),
          FieldSnapshot(
            name: "stateFlags",
            unit: State,
            history: {},
          ),
          FieldSnapshot(
            name: "failsafePhase",
            unit: FailsafePhase,
            history: {
              "IDLE": 17,
            },
          ),
          FieldSnapshot(
            name: "rxSignalReceived",
            unit: Boolean,
            history: History(
              yes: 17,
              no: 0,
            ),
          ),
          FieldSnapshot(
            name: "rxFlightChannelsValid",
            unit: Boolean,
            history: History(
              yes: 17,
              no: 0,
            ),
          ),
        ]),
      ),
    )),
  ],
)
