tests/snapshots/snapshots__fc_blackbox@crashing-LOG00002.BFL.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/fc-blackbox/src/test-data/crashing-LOG00002.BFL"
---
FileSnapshot(
  count: 1,
  logs: [
    Err(InvalidFirmware("EmuFlight 3.7.0 (9366544) OMNIBUSF4SD")),
  ],
)
