tests/snapshots/snapshots__gimbal_ghost@emuf_001.bbl.snap
---
source: tests/snapshots.rs
expression: snapshot
input_file: ".modules/gimbal-ghost/test/emuf_001.bbl"
---
File(
  count: 2,
  logs: [
    Err(InvalidFirmware("EmuFlight 0.4.1 (7bac6ddd0) HELIOSPRING")),
    Err(InvalidFirmware("EmuFlight 0.4.1 (7bac6ddd0) HELIOSPRING")),
  ],
)
